syntax = "proto3";

package ru.otus.homework;

option java_multiple_files = true;

message NumberRequest {
  int32 first_value = 1;
  int32 last_value = 2;
}

message NumberResponse {
  int32 value = 1;
}

service NumberStreamService {
  rpc StreamNumbers(NumberRequest) returns (stream NumberResponse);
}
